www: css: fix disabled inputs being unreadable

--- a/www/static/css/theme.css
+++ b/www/static/css/theme.css
@@ -223,6 +223,14 @@ pre, pre.prettyprint, input[type=text], input[type=password], textarea.form-cont
     box-shadow: none;
 }
 
+/* disabled inputs */
+.form-control[disabled],
+.form-control[readonly],
+fieldset[disabled] .form-control {
+    background-color:var(--background-color-2);
+}
+
+
 /* progress bars */
 .progress-bar {
 	color: #000;
